// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vae abortEarly 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "id应必填",
      "path": Array [
        "id",
      ],
    },
    Object {
      "message": "images应是数组类型",
      "path": Array [
        "images",
      ],
    },
  ],
  "message": "id应必填",
  "success": false,
}
`;

exports[`vae abortEarly 2`] = `
Object {
  "issues": Array [
    Object {
      "message": "id应必填",
      "path": Array [
        "id",
      ],
    },
  ],
  "message": "id应必填",
  "success": false,
}
`;

exports[`vae abortEarly 3`] = `
Object {
  "issues": Array [
    Object {
      "message": "images.1应是一个合法的网址",
      "path": Array [
        "images",
        1,
      ],
    },
    Object {
      "message": "images.2应是一个合法的网址",
      "path": Array [
        "images",
        2,
      ],
    },
  ],
  "message": "images.1应是一个合法的网址",
  "success": false,
}
`;

exports[`vae abortEarly 4`] = `
Object {
  "issues": Array [
    Object {
      "message": "images.1应是一个合法的网址",
      "path": Array [
        "images",
        1,
      ],
    },
  ],
  "message": "images.1应是一个合法的网址",
  "success": false,
}
`;

exports[`vae array 1`] = `
Object {
  "data": Array [
    "1",
    "2",
  ],
  "success": true,
}
`;

exports[`vae array 2`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应至少包含3个元素",
      "path": Array [],
    },
  ],
  "message": ".应至少包含3个元素",
  "success": false,
}
`;

exports[`vae array 3`] = `
Object {
  "data": Array [
    "1",
    "2",
  ],
  "success": true,
}
`;

exports[`vae boolean 1`] = `
Object {
  "data": undefined,
  "success": true,
}
`;

exports[`vae boolean 2`] = `
Object {
  "data": false,
  "success": true,
}
`;

exports[`vae boolean 3`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae boolean 4`] = `
Object {
  "data": false,
  "success": true,
}
`;

exports[`vae boolean 5`] = `
Object {
  "data": false,
  "success": true,
}
`;

exports[`vae boolean 6`] = `
Object {
  "data": false,
  "success": true,
}
`;

exports[`vae boolean 7`] = `
Object {
  "data": true,
  "success": true,
}
`;

exports[`vae boolean 8`] = `
Object {
  "data": true,
  "success": true,
}
`;

exports[`vae boolean 9`] = `
Object {
  "data": true,
  "success": true,
}
`;

exports[`vae case: pass1-pass2 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "密码2应等于密码1",
      "path": Array [],
    },
  ],
  "message": "密码2应等于密码1",
  "success": false,
}
`;

exports[`vae case: pass1-pass2 2`] = `
Object {
  "data": Object {
    "password": "123",
    "password2": "123",
  },
  "success": true,
}
`;

exports[`vae case: pass1-pass2 3`] = `
Object {
  "issues": Array [
    Object {
      "message": "密码2应等于密码1",
      "path": Array [
        "password2",
      ],
    },
  ],
  "message": "密码2应等于密码1",
  "success": false,
}
`;

exports[`vae case: pass1-pass2 4`] = `
Object {
  "data": Object {
    "password": "123",
    "password2": "123",
  },
  "success": true,
}
`;

exports[`vae cast 1`] = `
Object {
  "extra": Object {
    "gender": undefined,
  },
  "id": undefined,
  "images": Array [
    "2",
  ],
  "type": 2,
}
`;

exports[`vae cast 2`] = `
Object {
  "ddd": 1,
  "extra": Object {
    "gender": undefined,
  },
  "id": 1,
  "images": Array [
    "2",
  ],
  "type": 2,
}
`;

exports[`vae clone 1`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae clone 2`] = `
Object {
  "data": "",
  "success": true,
}
`;

exports[`vae clone 3`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae create 1`] = `
Object {
  "data": "1",
  "success": true,
}
`;

exports[`vae create 2`] = `
Object {
  "data": Object {
    "id": 1,
  },
  "success": true,
}
`;

exports[`vae cuid, cuid2 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "cuid有误",
      "path": Array [
        "cuid",
      ],
    },
    Object {
      "message": "cuid2有误",
      "path": Array [
        "cuid2",
      ],
    },
  ],
  "message": "cuid有误",
  "success": false,
}
`;

exports[`vae cuid, cuid2 2`] = `
Object {
  "issues": Array [
    Object {
      "message": "cuid2有误",
      "path": Array [
        "cuid2",
      ],
    },
  ],
  "message": "cuid2有误",
  "success": false,
}
`;

exports[`vae cuid, cuid2 3`] = `
Object {
  "data": Object {
    "cuid": "clpw4etzi0000sgrl4uki28fv",
    "cuid2": "tz4a98xxat96iws9zmbrgj3a",
  },
  "success": true,
}
`;

exports[`vae date 1`] = `
Object {
  "data": undefined,
  "success": true,
}
`;

exports[`vae date 2`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是日期类型",
      "path": Array [],
    },
  ],
  "message": ".应是日期类型",
  "success": false,
}
`;

exports[`vae date 3`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae date 4`] = `
Object {
  "data": 2023-07-14T03:23:28.926Z,
  "success": true,
}
`;

exports[`vae date 5`] = `
Object {
  "data": 2023-07-14T03:23:28.926Z,
  "success": true,
}
`;

exports[`vae date 6`] = `
Object {
  "data": 2023-07-14T03:23:28.926Z,
  "success": true,
}
`;

exports[`vae date 7`] = `
Object {
  "issues": Array [
    Object {
      "message": "应大于等于给定日期",
      "path": Array [],
    },
  ],
  "message": "应大于等于给定日期",
  "success": false,
}
`;

exports[`vae date 8`] = `
Object {
  "issues": Array [
    Object {
      "message": "应小于等于给定日期",
      "path": Array [],
    },
  ],
  "message": "应小于等于给定日期",
  "success": false,
}
`;

exports[`vae date 9`] = `
Object {
  "data": 2023-07-14T03:23:28.926Z,
  "success": true,
}
`;

exports[`vae meta 1`] = `
Object {
  "x": 1,
  "y": "222",
}
`;

exports[`vae number 1`] = `
Object {
  "data": undefined,
  "success": true,
}
`;

exports[`vae number 2`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是数值类型",
      "path": Array [],
    },
  ],
  "message": ".应是数值类型",
  "success": false,
}
`;

exports[`vae number 3`] = `
Object {
  "data": 3,
  "success": true,
}
`;

exports[`vae number 4`] = `
Object {
  "data": 3,
  "success": true,
}
`;

exports[`vae number 5`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae number 6`] = `
Object {
  "data": 3,
  "success": true,
}
`;

exports[`vae number 7`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是数值类型",
      "path": Array [],
    },
  ],
  "message": ".应是数值类型",
  "success": false,
}
`;

exports[`vae number 8`] = `
Object {
  "data": 3,
  "success": true,
}
`;

exports[`vae number 9`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应大于或等于6",
      "path": Array [],
    },
  ],
  "message": ".应大于或等于6",
  "success": false,
}
`;

exports[`vae number 10`] = `
Object {
  "data": 0,
  "success": true,
}
`;

exports[`vae number 11`] = `
Object {
  "data": 0,
  "success": true,
}
`;

exports[`vae number 12`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应大于2",
      "path": Array [],
    },
  ],
  "message": ".应大于2",
  "success": false,
}
`;

exports[`vae number 13`] = `
Object {
  "data": 0,
  "success": true,
}
`;

exports[`vae number 14`] = `
Object {
  "data": -1,
  "success": true,
}
`;

exports[`vae number 15`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个整数",
  "success": false,
}
`;

exports[`vae number 16`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae number 17`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae number 18`] = `
Object {
  "data": 1.2,
  "success": true,
}
`;

exports[`vae number 19`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正数",
  "success": false,
}
`;

exports[`vae number 20`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正数",
  "success": false,
}
`;

exports[`vae number 21`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个非正数",
      "path": Array [],
    },
  ],
  "message": ".应是一个非正数",
  "success": false,
}
`;

exports[`vae number 22`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个非正数",
      "path": Array [],
    },
  ],
  "message": ".应是一个非正数",
  "success": false,
}
`;

exports[`vae number 23`] = `
Object {
  "data": -1,
  "success": true,
}
`;

exports[`vae number 24`] = `
Object {
  "data": 0,
  "success": true,
}
`;

exports[`vae number 25`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个负数",
      "path": Array [],
    },
  ],
  "message": ".应是一个负数",
  "success": false,
}
`;

exports[`vae number 26`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个负数",
      "path": Array [],
    },
  ],
  "message": ".应是一个负数",
  "success": false,
}
`;

exports[`vae number 27`] = `
Object {
  "data": -1,
  "success": true,
}
`;

exports[`vae number 28`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个负数",
      "path": Array [],
    },
  ],
  "message": ".应是一个负数",
  "success": false,
}
`;

exports[`vae number 29`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae number 30`] = `
Object {
  "data": 1.2,
  "success": true,
}
`;

exports[`vae number 31`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个非负数",
      "path": Array [],
    },
  ],
  "message": ".应是一个非负数",
  "success": false,
}
`;

exports[`vae number 32`] = `
Object {
  "data": 0,
  "success": true,
}
`;

exports[`vae number 33`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae number 34`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae number 35`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae number 36`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae number 37`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae number 38`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae number 39`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae number 40`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个正整数",
      "path": Array [],
    },
  ],
  "message": ".应是一个正整数",
  "success": false,
}
`;

exports[`vae object 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "name应必填",
      "path": Array [
        "name",
      ],
    },
    Object {
      "message": "gender应必填",
      "path": Array [
        "gender",
      ],
    },
  ],
  "message": "name应必填",
  "success": false,
}
`;

exports[`vae object 2`] = `
Object {
  "issues": Array [
    Object {
      "message": "gender应必填",
      "path": Array [
        "gender",
      ],
    },
  ],
  "message": "gender应必填",
  "success": false,
}
`;

exports[`vae object 3`] = `
Object {
  "data": Object {
    "gender": "male",
    "id": 1,
    "images": Array [],
    "isAdmin": false,
    "name": "jack",
  },
  "success": true,
}
`;

exports[`vae object 4`] = `
Object {
  "issues": Array [
    Object {
      "message": "images.0应必填",
      "path": Array [
        "images",
        0,
      ],
    },
  ],
  "message": "images.0应必填",
  "success": false,
}
`;

exports[`vae optional 1`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae optional 2`] = `
Object {
  "data": "",
  "success": true,
}
`;

exports[`vae optional 3`] = `
Object {
  "data": "",
  "success": true,
}
`;

exports[`vae optionalFields, requiredFields 1`] = `
Object {
  "data": Object {
    "id": 0,
    "name": undefined,
  },
  "success": true,
}
`;

exports[`vae optionalFields, requiredFields 2`] = `
Object {
  "issues": Array [
    Object {
      "message": "name应必填",
      "path": Array [
        "name",
      ],
    },
  ],
  "message": "name应必填",
  "success": false,
}
`;

exports[`vae optionalFields, requiredFields 3`] = `
Object {
  "data": Object {
    "id": undefined,
    "name": undefined,
  },
  "success": true,
}
`;

exports[`vae optionalFields, requiredFields 4`] = `
Object {
  "issues": Array [
    Object {
      "message": "name应必填",
      "path": Array [
        "name",
      ],
    },
  ],
  "message": "name应必填",
  "success": false,
}
`;

exports[`vae optionalFields, requiredFields 5`] = `
Object {
  "data": Object {
    "id": undefined,
    "name": undefined,
  },
  "success": true,
}
`;

exports[`vae parseOrThrow 1`] = `".的长度最少应到3位"`;

exports[`vae parseOrThrow 2`] = `"id应必填; name的长度最少应到3位"`;

exports[`vae pickFields, omitFields 1`] = `
Object {
  "data": Object {
    "id": 0,
    "name": "jack",
  },
  "success": true,
}
`;

exports[`vae pickFields, omitFields 2`] = `
Object {
  "data": Object {
    "id": 0,
  },
  "success": true,
}
`;

exports[`vae pickFields, omitFields 3`] = `
Object {
  "data": Object {
    "name": "jack",
  },
  "success": true,
}
`;

exports[`vae pickFields, omitFields 4`] = `
Object {
  "data": Object {
    "id": 0,
  },
  "success": true,
}
`;

exports[`vae pickFields, omitFields 5`] = `
Object {
  "data": Object {
    "name": "jack",
  },
  "success": true,
}
`;

exports[`vae preserveUnknownKeys 1`] = `
Object {
  "data": Object {
    "id": 1,
  },
  "success": true,
}
`;

exports[`vae preserveUnknownKeys 2`] = `
Object {
  "data": Object {
    "id": 1,
    "name": "sss",
  },
  "success": true,
}
`;

exports[`vae reach 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "id应是一个正整数",
      "path": Array [
        "id",
      ],
    },
    Object {
      "message": "extra.gender应是下列值之一:0,1",
      "path": Array [
        "extra",
        "gender",
      ],
    },
    Object {
      "message": "type应是下列值之一:3,4",
      "path": Array [
        "type",
      ],
    },
  ],
  "message": "id应是一个正整数",
  "success": false,
}
`;

exports[`vae reach 2`] = `
Object {
  "data": 1,
  "success": true,
}
`;

exports[`vae reach 3`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是下列值之一:0,1",
      "path": Array [],
    },
  ],
  "message": ".应是下列值之一:0,1",
  "success": false,
}
`;

exports[`vae reach 4`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是字符串类型",
      "path": Array [],
    },
  ],
  "message": ".应是字符串类型",
  "success": false,
}
`;

exports[`vae requiredFieldsAtLeastOne 1`] = `
Object {
  "issues": Array [
    Object {
      "message": ".中至少有一个字段必填:name,studentNumber,idNumber",
      "path": Array [],
    },
  ],
  "message": ".中至少有一个字段必填:name,studentNumber,idNumber",
  "success": false,
}
`;

exports[`vae requiredFieldsAtLeastOne 2`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": "成龙",
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae requiredFieldsAtLeastOne 3`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": undefined,
    "school": undefined,
    "studentNumber": "11111",
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae requiredFieldsAtLeastOne 4`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": "220281197105291353",
    "identityId": 1,
    "major": undefined,
    "name": undefined,
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae runtime 1`] = `
Object {
  "data": Object {
    "name": "ffff",
    "status": true,
  },
  "success": true,
}
`;

exports[`vae runtime 2`] = `
Object {
  "data": Object {
    "name": "ffff",
    "status": false,
  },
  "success": true,
}
`;

exports[`vae runtime 3`] = `
Object {
  "issues": Array [
    Object {
      "message": "name应必填",
      "path": Array [
        "name",
      ],
    },
  ],
  "message": "name应必填",
  "success": false,
}
`;

exports[`vae runtime 4`] = `
Object {
  "data": Object {
    "name": undefined,
    "status": false,
  },
  "success": true,
}
`;

exports[`vae shapeOfFields 1`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": "成龙",
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae shapeOfFields 2`] = `
Object {
  "data": Object {
    "gender": "male",
    "id": 1,
    "name": "成龙",
  },
  "success": true,
}
`;

exports[`vae shapeOfFields 3`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": "成龙",
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae string 1`] = `
Object {
  "data": undefined,
  "success": true,
}
`;

exports[`vae string 2`] = `
Object {
  "data": "",
  "success": true,
}
`;

exports[`vae string 3`] = `
Object {
  "data": "hello",
  "success": true,
}
`;

exports[`vae string 4`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae string 5`] = `
Object {
  "data": "hello",
  "success": true,
}
`;

exports[`vae string 6`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应必填",
      "path": Array [],
    },
  ],
  "message": ".应必填",
  "success": false,
}
`;

exports[`vae string 7`] = `
Object {
  "data": "",
  "success": true,
}
`;

exports[`vae string 8`] = `
Object {
  "data": "hello",
  "success": true,
}
`;

exports[`vae string 9`] = `
Object {
  "issues": Array [
    Object {
      "message": ".的长度最少应到6位",
      "path": Array [],
    },
  ],
  "message": ".的长度最少应到6位",
  "success": false,
}
`;

exports[`vae string 10`] = `
Object {
  "issues": Array [
    Object {
      "message": ".的长度最多可到2位",
      "path": Array [],
    },
  ],
  "message": ".的长度最多可到2位",
  "success": false,
}
`;

exports[`vae string 11`] = `
Object {
  "issues": Array [
    Object {
      "message": ".的长度应为3位",
      "path": Array [],
    },
  ],
  "message": ".的长度应为3位",
  "success": false,
}
`;

exports[`vae string 12`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个合法的邮箱",
      "path": Array [],
    },
  ],
  "message": ".应是一个合法的邮箱",
  "success": false,
}
`;

exports[`vae string 13`] = `
Object {
  "data": "hello@gmail.com",
  "success": true,
}
`;

exports[`vae string 14`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个合法的网址",
      "path": Array [],
    },
  ],
  "message": ".应是一个合法的网址",
  "success": false,
}
`;

exports[`vae string 15`] = `
Object {
  "data": "https://baidu.com",
  "success": true,
}
`;

exports[`vae string 16`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应满足正则表达式/^\\\\d+$/",
      "path": Array [],
    },
  ],
  "message": ".应满足正则表达式/^\\\\d+$/",
  "success": false,
}
`;

exports[`vae string 17`] = `
Object {
  "data": "234",
  "success": true,
}
`;

exports[`vae string 18`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应包含字符串dd",
      "path": Array [],
    },
  ],
  "message": ".应包含字符串dd",
  "success": false,
}
`;

exports[`vae string 19`] = `
Object {
  "data": "23dd4",
  "success": true,
}
`;

exports[`vae string 20`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应以字符串dd开头",
      "path": Array [],
    },
  ],
  "message": ".应以字符串dd开头",
  "success": false,
}
`;

exports[`vae string 21`] = `
Object {
  "data": "dd234",
  "success": true,
}
`;

exports[`vae string 22`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应以字符串dd结尾",
      "path": Array [],
    },
  ],
  "message": ".应以字符串dd结尾",
  "success": false,
}
`;

exports[`vae string 23`] = `
Object {
  "data": "234dd",
  "success": true,
}
`;

exports[`vae string 24`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个合法的手机号码",
      "path": Array [],
    },
  ],
  "message": ".应是一个合法的手机号码",
  "success": false,
}
`;

exports[`vae string 25`] = `
Object {
  "data": "18080000000",
  "success": true,
}
`;

exports[`vae string 26`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应是一个合法的身份证号码",
      "path": Array [],
    },
  ],
  "message": ".应是一个合法的身份证号码",
  "success": false,
}
`;

exports[`vae string 27`] = `
Object {
  "data": "110101202305033210",
  "success": true,
}
`;

exports[`vae string 28`] = `
Object {
  "data": "110101202305033210",
  "success": true,
}
`;

exports[`vae true, false 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "true应是真值",
      "path": Array [
        "true",
      ],
    },
    Object {
      "message": "false应是假值",
      "path": Array [
        "false",
      ],
    },
  ],
  "message": "true应是真值",
  "success": false,
}
`;

exports[`vae true, false 2`] = `
Object {
  "data": Object {
    "false": false,
    "true": true,
  },
  "success": true,
}
`;

exports[`vae x | undefined 1`] = `
Object {
  "data": "test",
  "success": true,
}
`;

exports[`vae x | undefined 2`] = `
Object {
  "data": undefined,
  "success": true,
}
`;

exports[`vae 可覆盖定义 1`] = `
Object {
  "issues": Array [
    Object {
      "message": ".的长度最少应到3位",
      "path": Array [],
    },
  ],
  "message": ".的长度最少应到3位",
  "success": false,
}
`;

exports[`vae 可覆盖定义 2`] = `
Object {
  "data": "12",
  "success": true,
}
`;

exports[`vae 可覆盖定义 3`] = `
Object {
  "issues": Array [
    Object {
      "message": ".应小于或等于3",
      "path": Array [],
    },
  ],
  "message": ".应小于或等于3",
  "success": false,
}
`;

exports[`vae 可覆盖定义 4`] = `
Object {
  "data": 4,
  "success": true,
}
`;

exports[`vae 支持抛出错误作为 message 1`] = `
Object {
  "issues": Array [
    Object {
      "message": "x err",
      "path": Array [
        "id",
      ],
    },
  ],
  "message": "x err",
  "success": false,
}
`;

exports[`vae 支持抛出错误作为 message 2`] = `
Object {
  "issues": Array [
    Object {
      "message": "y err",
      "path": Array [
        "id",
      ],
    },
  ],
  "message": "y err",
  "success": false,
}
`;

exports[`vae 支持抛出错误作为 message 3`] = `
Object {
  "data": Object {
    "id": "z00003",
  },
  "success": true,
}
`;

exports[`vae 数组处理 1`] = `
Array [
  "hello",
  "echoHello",
]
`;

exports[`vae 综合 1`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": "成龙",
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;

exports[`vae 综合2 1`] = `
Object {
  "data": Object {
    "campus": undefined,
    "class": undefined,
    "college": undefined,
    "companyName": undefined,
    "gender": "male",
    "grade": undefined,
    "idNumber": undefined,
    "identityId": 1,
    "major": undefined,
    "name": "成龙",
    "school": undefined,
    "studentNumber": undefined,
    "userId": 1,
  },
  "success": true,
}
`;
